--- a/package.json
+++ b/package.json
@@ -17,12 +17,13 @@
     "gulp-concat": "^2.6.1",
     "gulp-pug": "^3.3.0",
     "gulp-rename": "^1.2.2",
-    "gulp-sass": "^3.2.1",
+    "gulp-sass": "^5.1.0",
     "gulp-sourcemaps": "^2.6.5",
     "gulp-uglify": "^3.0.2",
     "gulp-wait": "0.0.2",
     "gulp.spritesmith": "^6.3.0",
-    "rimraf": "^2.6.1"
+    "rimraf": "^2.6.1",
+    "sass": "^1.53.0"
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.13.0",
