--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "gulp-uglify": "^3.0.2",
     "gulp-wait": "0.0.2",
     "gulp.spritesmith": "^6.3.0",
+    "prettier": "3.3.2",
     "rimraf": "^2.6.1",
     "sass": "^1.53.0"
   },
