--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "bugs": {},
   "homepage": "",
   "devDependencies": {
+    "@prettier/plugin-pug": "^3.0.0",
     "browser-sync": "^2.18.8",
     "gulp": "^4.0.2",
     "gulp-concat": "^2.6.1",
@@ -22,7 +23,7 @@
     "gulp-uglify": "^3.0.2",
     "gulp-wait": "0.0.2",
     "gulp.spritesmith": "^6.3.0",
-    "prettier": "3.3.2",
+    "prettier": "^3.3.2",
     "rimraf": "^2.6.1",
     "sass": "^1.53.0"
   },
